feat(SNRGY-4538): add container status support for instances
